|
Quick Lists
|
|
Bug ID:
|
6849716
|
|
Votes
|
0
|
|
Synopsis
|
BitMap: performance regression introduced with G1
|
|
Category
|
hotspot:garbage_collector
|
|
Reported Against
|
|
|
Release Fixed
|
hs16(b05),
7(b63) (Bug ID:2179585)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
2-High
|
|
Related Bugs
|
6711316
,
6814552
|
|
Submit Date
|
10-JUN-2009
|
|
Description
|
The G1 integration (6711316: Open source the Garbage-First garbage collector) introduced a large performance regression in BitMap operations which are used heavily by parallel compaction. A synthetic benchmark shows a 50% increase in full gc time w/parallel compaction after 6711316.
Posted Date : 2009-06-10 08:05:27.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
The BitMap functions verify_index() and verify_range(), which contain only asserts, were changed from inline to out-of-line and the definitions moved to BitMap.cpp. This forced the c++ compilers to insert calls to the (empty) functions in product builds. Previously, the empty inline bodies were optimized away.
Posted Date : 2009-06-10 08:05:27.0
http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/6e2afda171db
Posted Date : 2009-06-14 11:01:35.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |