6849716: BitMap - performance regression introduced with G1

Make verification code visible only in debug builds

Reviewed-by: iveresov, ysr, johnc, apetrusenko, tonyp